--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <tr>
             <th scope="col">ID</th>
             <th scope="col">Tarea</th>
+            <th scope="col">Realizada</th>
             
           </tr>
         </thead>
