Se agrego placeholder al input de tarea

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1 class="px-4 d-flex justify-content-center">To do List</h1>
     <hr>
     <p class="px-4 d-flex justify-content-center">Nueva tarea</p>
-    <div class="input-group mb-3 px-5">
-        <input id='nuevaTarea' type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <div class="input-group mb-3 px-5 mx-3">
+        <input id='nuevaTarea' type="text" class="form-control" placeholder="Agregar Tarea" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button class="btn  btn-success" type="button" id="agregarTarea">Agregar</button>
     </div>
     <div id="resumenTareas" class=" d-flex justify-content-evenly mt-4 mb-4">
